change sessions to 'live music'

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -87,7 +87,7 @@
         <h2>On Tap</h2>
         <p>URY On Tap - Refreshing content when you need it the most.</p>
         <p>At URY we understand that you have very busy lives and can’t always tune into your favourite show live, that’s why the majority of our shows are automatically uploaded to Mixcloud, simply find the show on our schedule and listen back. <a href="{{url "/schedule/thisweek"}}" title="Click to view our schedule.">Our schedule.</a></p>
-        <p>Believe it or not but radio is also a visual medium, check out our YouTube content to see all of our latest sessions and interviews. <a href="{{url "/ontap#YouTube"}}" title="click to view our youtube content.">Our YouTube content.</a></p>
+        <p>Believe it or not but radio is also a visual medium, check out our YouTube content to see all of our latest live music and interviews. <a href="{{url "/ontap#YouTube"}}" title="click to view our youtube content.">Our YouTube content.</a></p>
         <p>If all of that wasn’t enough for you, we still produce the occasional podcast too! <a href="{{url "/podcasts"}}" title="Click to find all of our podcasts.">View all podcasts!</a></p>
       </div>
     </div>
