--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -99,7 +99,7 @@
   </div>
   {{end}}
   <div id="index-videos" class="container-fluid container-padded pb-0 bg-sessions">
-    <h2>URY Sessions</h2>
+    <h2>Live Music on URY</h2>
     <div id="sessions-videos" class="row scroll-horiz pb-3 custom-scrollbar-music thumbnail-slider">
     </div>
   </div>
