--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -88,7 +88,7 @@
 <div id="index-videos" class="container-fluid container-padded bg-sessions">
   <div class="row">
     <div class="col-12 col-md-8">
-      <a name="YouTube"></a><h2>URY Sessions</h2>
+      <a name="YouTube"></a><h2>Live Music on URY</h2>
     </div>
   </div>
   <div id="sessions-videos" class="row pb-3 thumbnail-grid">
