Improve error handling

--- a/views/404.tmpl
+++ b/views/404.tmpl
@@ -1,5 +1,5 @@
 {{define "content"}}
-<div class="container container-padded outer page404">
+<div class="container container-padded outer error-page">
 	<div class="container container-padded">
 		<div>
 			<h1>4 <div class="spinner"></div> 4</h1>
