--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -118,6 +118,12 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-lg-6">
+        <h2>2022</h2>
+        <ul>
+          <li>Gold Best Chart Show Programming (<a href="{{url "/schedule/shows/timeslots/"}}">URY's Entry</a>)</li>
+          <li>Bronze Best Sport Programming (Roses 2022)</li>
+          <li>Bronze Best Technical Achievement (URY on FM)</li>
+        </ul>
         <h2>2021</h2>
         <ul>
           <li>Gold Best Sports Programming (<a href="{{url "/schedule/shows/14074/"}}">Roses Unlocked</a>)</li>
@@ -165,6 +171,8 @@
           <li>Bronze Best Station Branding</li>
           <li>Bronze Kevin Greening Award (<a href="{{url "/schedule/shows/13238/"}}">URY: Biscuit News</a>)</li>
         </ul>
+        </div>
+        <div class="col-md-6 col-lg-6">
         <h2>2015</h2>
         <ul>
           <li>Gold Best Entertainment Programme (<a href="{{url "/schedule/shows/12629/"}}">URY: Harry Whittaker Show</a>)</li>
@@ -173,8 +181,6 @@
           <li>Silver Best Technical Achievement (URY: Roses Mini OB Kits)</li>
           <li>Bronze Best Male Presenter (<a href="{{url "/people/8027/"}}">Harry Whittaker</a>)</li>
         </ul>
-        </div>
-        <div class="col-md-6 col-lg-6">
         <h2>2014</h2>
         <ul>
           <li>Silver Best Journalistic Programming (<a href="{{url "/schedule/shows/12896/"}}">URY: River Safety: York’s Rising Problem</a>)</li>
