--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -16,8 +16,8 @@ $primetime: #feb93a;
 $collab: #d14fda;
 
 $cin-primary: #FFF;
-$cin-dark-primary: #F96CDF;
-$cin-background: #292929;
+$cin-dark-primary: #E5204D;
+$cin-background: #210B3C;
 
 $disabled-color: rgb(150, 150, 150);
 $primary-color: $ury-blue-color;
