--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -108,7 +108,7 @@
     <div class="row">
       <div class="col-12 col-xl-4 p-4">
         <h2>{{.PageContext.ShortName}} {{.PageContext.ODName}}</h2>
-        <p>Explore the show catalogue, and listen back to your favorite episodes!</p>
+        <p>Explore the show catalogue, and listen back to your favourite episodes!</p>
         <a href="/ontap/">View all of our on demand content...</a>
       </div>
       <div id="season-list" class="col-12 col-md-6 col-xl-4 bg-off-white">
