add a basic music page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -397,3 +397,15 @@ body {
   flex-grow: 1;
   background-color: $off-white-color;
 }
+
+.stretched-link {
+  &::#{after} {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: after;
+    content: "";
+  }
+}
