--- a/views/music.tmpl
+++ b/views/music.tmpl
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row align-items-center text-center">
       <div class="col">
-        <h1 class="display-3">The Music Team Blog</h1>
+        <h1 class="display-3">Music Blog</h1>
       </div>
     </div>
   </div>
@@ -12,15 +12,21 @@
 <div class="container-fluid container-padded bg-off-white">
   <div class="container d-flex flex-column align-items-center">
     {{range .PageData}}
-      <div class="card my-3 w-75">
+      <div class="card my-3 w-75 shadow rouded">
         <div class="card-body">
-            <h2 class="card-title"><a target="_blank" class="stretched-link" href="{{.Link}}">{{.Title}}</a></h2>
-            <p class="card-text">Published on {{.PubDate}}</p>
+            <h2 class="card-title mb-1"><a target="_blank" class="stretched-link" href="{{.Link}}">{{.Title}}</a></h2>
+            <p class="card-text text-secondary">Published on {{.PubDate}}</p>
             <p class="card-text">{{.Content}}</p>
-            <a href="{{.Link}}" target="_blank" class="btn btn-primary">Read More</a>
         </div>
       </div>
     {{end}}
+    <div class="card my-3 w-75 shadow-lg rouded">
+      <div class="card-body d-flex justify-content-center">
+        <a href="https://medium.com/@urymusic" target="_blank" class="stretched-link">
+          <h3>More Posts</h3>
+        </a>
+      </div>
+    </div>
   </div>
 </div>
 {{end}}
