stupid aligning stupid headers

--- a/views/music.tmpl
+++ b/views/music.tmpl
@@ -23,7 +23,7 @@
     <div class="card my-3 w-75 shadow-lg rouded">
       <div class="card-body d-flex justify-content-center">
         <a href="https://medium.com/@urymusic" target="_blank" class="stretched-link">
-          <h3>More Posts</h3>
+          <h3 class="m-0">More Posts</h3>
         </a>
       </div>
     </div>
