trying to be funny

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -61,13 +61,13 @@
         <h2>On Air</h2>
           <h3>FM Radio</h3>
           <p>We're also broadcasting across campus on 88.3MHz FM.</p>
-          <p>Did your parents get rid of the boom box at a car boot sale? Pick us up on that radio you got yourself because you're at uni and you're an "adult" now.</p>
+          <p>Do you own a radio or a car that contains a radio? Pick us up on that radio you got yourself because you're at uni and you're an "adult" now.</p>
           <h3>In Your Ears</h3>
           <p>URY can occasionally be heard out and about on campus, we regularly attend campus events such as move-in days, Freshers’ Fairs, and Elections Result Night! If you hear us… come along and say hi!</p>
       </div>
       <div class="col-md-6 col-lg-4">
         <h2>Online</h2>
-        <p>Left your boom box at home? Don’t worry we are online too.</p>
+        <p>If you don't own a radio or if your radio is in your car and you want to listen to us outside your car then don’t worry we are online too.</p>
           <h3>URY Website</h3>
           <p>You can listen to us live through <a target="_blank" rel="noopener noreferrer" href="//ury.org.uk/live" title="Click to listen live.">radioplayer</a> (recommended), or via one of our streams:</p>
           <ul>
