--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -61,7 +61,7 @@
         <h2>On Air</h2>
           <h3>FM Radio</h3>
           <p>We're also broadcasting across campus on 88.3MHz FM.</p>
-          <p>Do you own a radio or a car that contains a radio? Pick us up on that radio you got yourself because you're at uni and you're an "adult" now.</p>
+          <p>Does your car have a radio? Did you buy yourself a radio because you're at uni and you're an "adult" now? Either way, tune it to 88.3!</p>
           <h3>In Your Ears</h3>
           <p>URY can occasionally be heard out and about on campus, we regularly attend campus events such as move-in days, Freshers’ Fairs, and Elections Result Night! If you hear us… come along and say hi!</p>
       </div>
