Replaced Text Banners with Logo-Based Titles, Blue-Shifted the banner backgrounds to increase contrast with the text, and inverted the current and next element so it blends with its new blue background less

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -39,9 +39,9 @@ $mobile-font-size: 10px;
 $mobile-max-width: 770px;
 
 //Current and Next
-$current-next-now-bg: #003367;
-$current-next-next-bg: rgba(0, 51, 103, .85);
-$current-next-txt-color: #ffffff;
+$current-next-now-bg: #f3f3f3;
+$current-next-next-bg: rgba(243, 243, 243, .85);
+$current-next-txt-color: #002d5a;
 //Schedule block colours
 $blocks-sustainer-color: $secondary-color;
 $blocks-regular-color: $off-white-color;
