--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -15,13 +15,13 @@
   <div class="container container-padded">
     <div class="row align-items-center text-center">
       <div class="col">
-        <h1 class="display-3">On Air, Online, On Demand</h1>
-        <h2 class="display-4">Broadcasting since 1968</h2>
+        <img class="pageTitleImage" src="/images/AboutUs.svg"/>
+        <h2 class="display-5">Broadcasting since 1968.</h2>
       </div>
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded bg-off-white">
+<div class="container-fluid container-padded bg-primary">
   <div class="container container-padded">
     <h1>Welcome to URY!</h1>
     <div class="row">
@@ -52,7 +52,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded bg-primary">
+<div class="container-fluid container-padded bg-off-white">
   <div class="container container-padded">
     <h1>How To Listen</h1>
     <p>There are many ways you can listen to URY, whether you’re a Uni of York student, friends and family of our presenters, or you’re just interested in what our student radio station has to offer.</p>
@@ -90,7 +90,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded">
+<div class="container-fluid container-padded bg-secondary">
   <div class="container container-padded">
     <h1>Our History</h1>
     <div> {{/* Prevents bug where p would appear inline with h2 */}}
@@ -104,7 +104,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded bg-secondary">
+<div class="container-fluid container-padded bg-off-white">
   <div class="container container-padded">
     <div class="row">
       <div class="col-12">
