--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row align-items-center text-center">
       <div class="col">
-        <h1 class="display-3">{{.PageContext.ShortName}} {{.PageContext.ODName}}</h1>
+        <img class="pageTitleImage" src="/images/OnTap.svg"/>
         <h2 class="display-5">Refreshing content when you need it the most.</h2>
       </div>
     </div>
