fixed chart show link, and made about us sound human

--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -85,7 +85,7 @@
         </fieldset>
       </div>
       <div class="row justify-content-center">
-        <input type="submit" class="btn btn-primary btn-lg">
+        <input type="submit" value="Sign Up!" class="btn btn-primary btn-lg">
       </div>
     </form>
   </div>
