--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -16,7 +16,7 @@
     <div class="row align-items-center text-center">
       <div class="col">
         <h1 class="display-3">On Air, Online, On Demand</h1>
-        <h2 class="display-4">Broadcasting since 1968.</h2>
+        <h2 class="display-4">Broadcasting since 1968</h2>
       </div>
     </div>
   </div>
@@ -26,15 +26,15 @@
     <h1>Welcome to URY!</h1>
     <div class="row">
       <div class="col-md-6 col-lg-4">
-        <h2>Who is URY?</h2>
+        <h2>Who are we?</h2>
         <p>{{.PageContext.SiteDescription}}</p>
         <p>The station is run by students for students, meaning the people behind the station understand what the listenership want to hear.</p>
-        <p>Our presenters cover a wide range of content. This includes a mixture of different genres and shows, which are tailor-made to different demographics. Our aim to inform and entertain the students of the University of York.</p>
+        <p>Our presenters cover a wide range of content. This includes a mixture of different genres and shows, which are tailor-made to different demographics. Our aim is to inform and entertain the students of the University of York.</p>
       </div>
       <div class="col-md-6 col-lg-4">
-        <h2>Where is URY?</h2>
-        <p>URY's studios lie at the very heart of the campus in our own building at Vanbrugh College.<p>
-        <p>But URY is not confined to the four walls of the station, we are always around the campus at major University and Student Union events, whether we're covering live music, recruiting new Freshers or reporting on major news events.</p>
+        <h2>Where are we?</h2>
+        <p>URY's studios lie at the very heart of the campus in our own building in Vanbrugh College.<p>
+        <p>However, URY is not confined to the four walls of the station; we are always around the campus at major University and Student Union events, be it covering live music, recruiting new freshers or reporting on major news events.</p>
         <p>
           <a href="{{url "/contact/#map"}}"title="Contact Page">Find us on a map!</a>
         </p>
@@ -54,20 +54,20 @@
 </div>
 <div class="container-fluid container-padded bg-primary">
   <div class="container container-padded">
-    <h1>How To Listen?</h1>
-    <p>There are many ways you can listen to URY, whether you’re a Uni of York student, friends and family of our presenters, or you’re just interested in what our student radio has to offer.</p>
+    <h1>How To Listen</h1>
+    <p>There are many ways you can listen to URY, whether you’re a Uni of York student, friends and family of our presenters, or you’re just interested in what our student radio station has to offer.</p>
     <div class="row">
       <div class="col-md-6 col-lg-4">
         <h2>On Air</h2>
           <h3>FM Radio</h3>
-          <p>We're also broadcasting across campus on 88.3MHz FM.</p>
-          <p>Does your car have a radio? Did you buy yourself a radio because you're at uni and you're an "adult" now? Either way, tune it to 88.3!</p>
+          <p>We broadcast across campus and the city of York on 88.3MHz FM.</p>
+          <p>Whether you have a radio in your alarm clock or in your car (or even a 'proper' radio!), make sure to tune it to 88.3FM!</p>
           <h3>In Your Ears</h3>
-          <p>URY can occasionally be heard out and about on campus, we regularly attend campus events such as move-in days, Freshers’ Fairs, and Elections Result Night! If you hear us… come along and say hi!</p>
+          <p>URY can occasionally be heard out and about on campus, as we regularly attend campus events such as move-in days, Freshers’ Fairs, and Elections Result Night. If you hear us, come along and say hi!</p>
       </div>
       <div class="col-md-6 col-lg-4">
         <h2>Online</h2>
-        <p>If you don't own a radio or if your radio is in your car and you want to listen to us outside your car then don’t worry we are online too.</p>
+        <p>If you don't own a radio (or if your only radio is in your car and you want to listen to us outside) then don’t worry, as we broadcast online too.</p>
           <h3>URY Website</h3>
           <p>You can listen to us live through <a target="_blank" rel="noopener noreferrer" href="//ury.org.uk/live" title="Click to listen live.">radioplayer</a> (recommended), or via one of our streams:</p>
           <ul>
@@ -76,15 +76,15 @@
             <li><a target="_blank" rel="noopener noreferrer" href="//audio.ury.org.uk/live-mobile" title="Listen to URY's Mobile Quality stream (48kb/s).">Mobile Quality (48 kb/s MPEG)</a></li>
           </ul>
           <h3>Smart Speakers</h3>
-          <p>We are also on TuneIn which means you can listen to us via most smart speakers, simply say “Play University Radio York”.</p>
+          <p>We are also on TuneIn, which means you can listen to us via most smart speakers - simply say “Play University Radio York”.</p>
           <h3>iTunes Internet Radio</h3>
-          <p>We are available on iTunes Radio: <br>Internet Radio -> College/University -> ((URY)) - University Radio York</p>
+          <p>You can even find us on iTunes Radio: <br>Internet Radio -> College/University -> ((URY)) - University Radio York</p>
       </div>
       <div class="col-md-6 col-lg-4">
         <h2>On Tap</h2>
         <p>URY On Tap - Refreshing content when you need it the most.</p>
-        <p>At URY we understand that you have very busy lives and can’t always tune into your favourite show live, that’s why the majority of our shows are automatically uploaded to Mixcloud, simply find the show on our schedule and listen back. <a href="{{url "/schedule/thisweek"}}" title="Click to view our schedule.">Our schedule.</a></p>
-        <p>Believe it or not but radio is also a visual medium, check out our YouTube content to see all of our latest live music and interviews. <a href="{{url "/ontap#YouTube"}}" title="click to view our youtube content.">Our YouTube content.</a></p>
+        <p>At URY we understand that our listeners have very busy lives and you can’t always tune into your favourite show live, but never fear! The majority of our shows are automatically uploaded to Mixcloud, simply look for the show slot you missed on <a href="{{url "/schedule/thisweek"}}" title="Click to view our schedule.">our schedule</a>, and you'll have the option to listen back to it at your leisure. </p>
+        <p>Believe it or not, but radio can also be a visual medium - check out <a href="{{url "/ontap#YouTube"}}" title="Click to view our youtube content.">our YouTube content</a> to see all of our latest live music and interviews. </p>
         <p>If all of that wasn’t enough for you, we still produce the occasional podcast too! <a href="{{url "/podcasts"}}" title="Click to find all of our podcasts.">View all podcasts!</a></p>
       </div>
     </div>
@@ -94,13 +94,13 @@
   <div class="container container-padded">
     <h1>Our History</h1>
     <div> {{/* Prevents bug where p would appear inline with h2 */}}
-      <p>URY has a rich history of pioneering broadcasting, commencing under a test licence as Radio Heslington in 1967, becoming Radio York in 1968 and culminating in 1969 as the first fully-licensed legal independent radio station in the UK with an inaugural broadcast by John Peel.</p>
+      <p>URY has a rich history of pioneering broadcasting, commencing under a test licence as Radio Heslington in 1967, becoming Radio York in 1968 and culminating in 1969 with University Radio York becoming the first fully-licensed legal independent radio station in the UK.</p>
       <p>Over the years, we have been fortunate enough to receive numerous awards, including BBC Radio 1 Student Station of the Year in 2005, and many awards from the Student Radio Association.</p>
-      <p>At URY we cover a large range of campus events including Student Union Elections, but we also host our own charity events, such as the 40-hour broadcast in aid of Macmillan Cancer Support back in March 2013, where we raised over £1,800. In June 2016, we went a step further and hosted URY’s longest ever show “URY 101”, live from Greg’s Place for 101 hours, all in aid of Yorkshire Cancer Research raising a massive £1,700.</p>
+      <p>At URY we cover a large range of campus events including Student Union Elections, but we also host our own charity events, such as the 40-hour broadcast in aid of Macmillan Cancer Support back in March 2013, where we raised over £1,800. In June 2016, we went a step further and hosted URY’s (then-)longest ever show “URY 101” live from Greg’s Place for 101 hours, all in aid of Yorkshire Cancer Research, for whom we raised a massive £1,700.</p>
       <p>We pride ourselves at URY for running all the technical aspects of the radio station ourselves. In summer 2015, the internal audio routing was completely overhauled and converted to audio over IP by the engineering team in a project known as “Beat the Buzz”.</p>
-      <p>In 2018 we were awarded a grant by the University of York of £40,000 to upgrade our studios and upgrade them we did. Brand new audio equipment, a total interior re-design, and fancy red/blue colour schemes to match, the 40K project, completed Christmas 2019 and fronted by some of URY's most dedicated members, allowed us to produce highly polished material while also giving the broader community in the University a place to create their own audio content.</p>
-      <p>Over the decades we've enjoyed ourselves doing all manner of ridiculous things on and off-air. We pride ourselves on our innovative approach to radio that you will struggle to find in the industry. Luckily these ideas are recognised by industry professionals by a plethora of awards. In 2020, nearly 15 years since our last win for gold in the category - we won the gold award for Best Student Radio Station in the country at the Student Radio Awards. The judges praised the attention we gave to our audience and the novel ideas we pushed to the forefront of our content.</p>
-      <p>In 2021, we were given a license to broadcast on FM at the same time as AM, getting us onto both 1350AM and 88.3FM. In 2023 we decided to finally turn off our AM transmitter for good. To send it off we did a 135 hour long broadcast which included inviting back many of our alumni to do send off shows. As of the 26th of June 2023 we no longer broadcast on AM. </p>
+      <p>In 2018 we were awarded a grant by the University of York of £40,000 to upgrade our studios, and upgrade them we certainly did. Brand new audio equipment, a total interior re-design, and fancy red/blue colour schemes to match, the 40K project, completed Christmas 2019 and fronted by some of URY's most dedicated members, allowed us to produce highly polished material while also giving the broader community in the University a place to create their own audio content.</p>
+      <p>Over the decades we've enjoyed ourselves doing all manner of ridiculous things on and off-air. We pride ourselves on our innovative approach to radio that you will struggle to find in the industry, but luckily these ideas are recognised by industry professionals with a plethora of awards. In 2020, nearly 15 years since our last win for gold in the category - we won the gold award for Best Student Radio Station in the country at the Student Radio Awards. The judges praised the attention we gave to our audience and the novel ideas we pushed to the forefront of our content.</p>
+      <p>In 2021, we were given a license to broadcast on FM at the same time as AM, getting us onto both 1350AM and 88.3FM. In 2023 we decided to finally turn off our AM transmitter for good. To send it off, we broke our previous record by doing a 135-hour long broadcast which included inviting back many of our alumni to do send off shows. As of the 26th of June 2023 we no longer broadcast on AM. </p>
     </div>
   </div>
 </div>
@@ -109,15 +109,15 @@
     <div class="row">
       <div class="col-12">
         <h1>Our Awards</h1>
-        <p>We are really pleased with everything we have achieved at {{.PageContext.ShortName}}, and it is really great to be
-          recognised for this.</p>
+        <p>We are incredibly proud of everything we have achieved at {{.PageContext.ShortName}} over the years, and it's an honour to be
+          recognised for it.</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6 col-lg-6">
         <h2>2022</h2>
         <ul>
-          <li>Gold Best Chart Show Programming (<a href="{{url "/schedule/shows/timeslots/"}}">URY's Entry</a>)</li>
+          <li>Gold Best Chart Show Programming (<a href="{{url "/schedule/shows/timeslots/150434/"}}">URY's Entry</a>)</li>
           <li>Bronze Best Sport Programming (Roses 2022)</li>
           <li>Bronze Best Technical Achievement (URY on FM)</li>
         </ul>
