--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -9,7 +9,7 @@
   {{else if not .ShowOnAir}}
   	"No shows are on air right now, so there's no-one to send a message to." disabled
   {{else}}
-  	"Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"
+  	"Why not send a message to the studio presenters? Thoughts, banter and song requests all go here!"
   {{end}}></textarea>
   <p id="charcount" class="text-muted my-1"></p>
   <button id="messagesend"  class="btn btn-primary btn-block" type="submit" value="SEND MESSAGE"
