--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -23,7 +23,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded text-center">
+<div class="container-fluid container-padded text-center bg-white">
   <div class="row">
     <div class="col-md-2 align-self-center">
       <a href="//instagram.com/{{.PageContext.MainInstagram}}"><i class="fab fa-instagram fa-2x"></i><h3>Our Instagram</h3></a>
