--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -4,7 +4,7 @@
         {{template "index_countdown" .}}
     {{end}}
   {{end}}
-  <div class="container-fluid header-large current-next position-relative">
+  <div class="container-fluid header-large current-next">
   <img src="/images/sra-2020-bug.png" class="sra-2020-bug" alt="" />
   {{if .PageContext.Christmas}}
     <div class="snow"></div>
