--- a/views/podcast.tmpl
+++ b/views/podcast.tmpl
@@ -36,7 +36,7 @@
   </div>
 
   {{with .PageData}}
-  <div class="container-fluid bg-off-white">
+  <div class="container-fluid bg-off-white container-padded">
     <div class="container container-padded">
       <div class="row">
         <div class="col-12 col-lg-3">
@@ -101,7 +101,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid bg-third collapse" id="collapseEmbedCode">
+  <div class="container-fluid bg-third collapse container-padded" id="collapseEmbedCode">
     <div class="container container-padded">
       <h2>Embed this podcast...</h2>
       <div class="row">
