--- a/views/podcasts.tmpl
+++ b/views/podcasts.tmpl
@@ -20,7 +20,7 @@
   </div>
 
 {{with .PageData}}
-<div class="container container-padded pt-5 mt-5">
+<div class="container-fluid podcasts-container container-padded bg-white">
   <nav class="row nav justify-content-between">
     <span>
       <a class="nav-link
