--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -18,7 +18,7 @@
 </div>
 
 <!-- schedule header -->
-<div class="container-fluid bg-off-white">
+<div class="container-fluid bg-off-white container-padded">
   <div class="container justify-content-between py-3">
     <div class="row">
       <div class="col-auto">
@@ -59,7 +59,7 @@
 </div>
 
 <!-- schedule body -->
-<div class="container-fluid bg-off-white">
+<div class="container-fluid bg-off-white container-padded">
   <div class="container">
   {{with .Schedule}}
   {{if .Table}}
