--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -23,18 +23,21 @@
 }
 .current-next-container {
   max-width: 950px;
+  border-radius: 2rem;
 }
 
 .current-and-next {
   color: white;
   overflow: hidden;
+  border-radius: 2rem;
 
   .current-and-next-img {
     background: $current-next-now-bg;
-
+    
     img {
       width: 100%;
       height: auto;
+      border-radius: 2rem;
     }
   }
 
