--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -13,7 +13,7 @@
 {{end}}
 
 {{define "content"}}
-<div class="container-fluid header-medium on-demand position-relative">
+<div class="container-fluid header-medium on-demand">
   <div class="container">
     <div class="row align-items-center text-center">
       <div class="col">
