--- a/views/team.tmpl
+++ b/views/team.tmpl
@@ -39,13 +39,13 @@
       </div>
     </div>
     {{with .Team}}
-    <div class="container-fluid">
+    <div class="container-fluid container-padded bg-white">
       <div class="container container-padded">
         <h4 class="display-4">{{.Name}}</h4>
       </div>
     </div>
     {{if .Description}}
-    <div class="container-fluid bg-primary">
+    <div class="container-fluid bg-primary container-padded">
       <div class="container container-padded">
         <h2>Team Description</h2>
         <p>{{html .Description}}</p>
@@ -55,7 +55,7 @@
     {{end}}
     {{end}}
     {{if len .Team.Officers}}
-    <div class="container-fluid bg-secondary">
+    <div class="container-fluid bg-secondary container-padded">
       <div class="container container-padded">
         <h2>Team Officers</h2>
         <div class="row">
@@ -72,7 +72,7 @@
       </div>
     </div>
     {{end}}
-    <div class="container-fluid bg-third">
+    <div class="container-fluid bg-third container-padded">
       <div class="container container-padded">
         <h2>Get Involved</h2>
         <p>
