--- a/views/teams.tmpl
+++ b/views/teams.tmpl
@@ -13,7 +13,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid bg-off-white">
+  <div class="container-fluid bg-white container-padded">
     <div class="container container-padded">
       <h1>Get Involved</h1>
       <p>
@@ -23,7 +23,7 @@
       </p>
     </div>
   </div>
-  <div class="container-fluid bg-off-white">
+  <div class="container-fluid bg-primary container-padded">
     <div class="container container-padded">
       <h1>Teams</h1>
       <div class="row justify-content-center">
