Fixed a missing curly bracket that I missed when sorting a merge conflict cause I'm an idiot

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -408,7 +408,7 @@ body {
   margin-top: -2rem;
   border-radius: 2rem 2rem 0 0;
   padding-top: 2rem;
-
+}
 .pageTitleImage{
   max-inline-size: 90%;
   max-height: 15rem;
