Reduces Border Radius on new curved objects, converts common curves to variables for easier editing, and fixes some general issues

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -50,3 +50,7 @@ $blocks-regular-color: $off-white-color;
 $custom-scrollbar-color: #FFF;
 
 $transition-time: 350ms;
+
+$border-curve-radius: 1.25rem;
+$internal-padding: 0.5rem;
+$internal-curve-radius: calc(#{$border-curve-radius} - #{$internal-padding});
