--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -3,7 +3,7 @@
 {{with .CurrentAndNext}}
 <div class="current-and-next row justify-content-center">
   {{if .Current}}
-  <div class="col-5 col-sm-3 col-md-2 p-0 current-and-next-img">
+  <div class="col-5 col-sm-3 col-md-2 current-and-next-img">
     <img src='
     {{- if .Current.Photo -}}
       //ury.org.uk{{.Current.Photo}}
