--- a/views/teams.tmpl
+++ b/views/teams.tmpl
@@ -1,7 +1,7 @@
 {{define "title"}}{{.PageContext.ShortName}} | Our Teams{{end}}
 {{define "content"}}
   {{with .PageData}}
- <div class="container-fluid header-medium teams-banner position-relative">
+ <div class="container-fluid header-medium teams-banner">
     <div class="container">
       <div class="row align-items-center text-center">
         <div class="col">
