--- a/views/team.tmpl
+++ b/views/team.tmpl
@@ -13,7 +13,7 @@
 {{end}}
 
 {{define "officer"}}
-<div class="col-12 col-sm-6 col-md-3 col-lg-2">
+<div class="col-12 col-sm-6 col-md-3 col-lg-2 ury-card">
   <a href="/people/{{.User.MemberID}}" title="Goto {{.User.Fname}} {{.User.Sname}}'s profile">
     <div class="user-img my-3">
       <img class="img-fluid" src="https://ury.org.uk{{.User.Photo}}" alt="Photo of {{.User.Fname}} {{.User.Sname}}">
