--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -28,26 +28,18 @@
   <div id="index-infobar" class="container-fluid bg-off-white container-padded">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-3">
+        <div class="col-lg-5">
         {{template "message_box" .}}
         </div>
-        <div class="col-lg-9">
+        <div class="col-lg-1">
+
+        </div>
+        <div class="col-lg-5">
           <h2>Get Involved</h2>
           <hr>
-          <div class="row">
-            <div class="col-lg-6">
-              <p>University Radio York has been alive since 1968, when we became the first legal independent radio station in the UK!</p>
-              <p>Help us continue our legacy by joining the URY team.</p>
-              <p>Contact our teams to find out more.</p>
-            </div>
-            <div class="col-lg-6">
-              <ul class="split-evenly-2 no-bullets">
-              {{range .Teams}}
-                <li><a href="{{url "/teams/"}}{{.Alias}}/" title="Find out more about {{.Name}}">{{.Name}}</a></li>
-              {{end}}
-              </ul>
-            </div>
-          </div>
+          <p>University Radio York has been alive since 1968, when we became the first legal independent radio station in the UK!</p>
+          <p>Help us continue our legacy by joining the URY team.</p>
+          <p><a href="{{url "/getinvolved/"}}">find out more</a></p>
         </div>
       </div>
     </div>
