--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -78,7 +78,7 @@
         <div class="card bg-white p-3">
           <div class="card-block">
             <h2 class="card-title">Programme Controller</h2>
-            <p class="card-text"><a href="mailto:programme.controller@ury.org.uk" title="Email the Programme Controller">programme.controller@ury.org.uk</a></p>
+            <p class="card-text"><a href="mailto:pc@ury.org.uk" title="Email the Programme Controller">pc@ury.org.uk</a></p>
             <p class="card-text">The Programme Controller manages the quality of the station’s output and adhering to our licenses, please contact them if you have any enquiries on this.</p>
           </div>
         </div>
