--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -14,7 +14,7 @@
   </div>
   <div class="col-7 col-sm-9 col-md-5 p-0 m-0">
     {{if .Current.Url}}
-    <a class="current-and-next-now p-2 px-3 p-sm-3 p-lg-4 " href="{{.Current.Url}}" title="Show currently on air: {{.Current.Title}}">
+    <a class="current-and-next-now p-2 px-3 p-sm-3 p-lg-4 " href="{{.Current.Url}}" title="Live now: {{.Current.Title}}">
     {{else}}
     <div class="current-and-next-now p-2 px-3 p-sm-3 p-lg-4">
     {{end}}
@@ -31,7 +31,7 @@
   {{if .Next}}
   <div class="col col-md-5 p-0 m-0">
     {{if .Next.Url}}
-    <a class="current-and-next-next p-3 p-lg-4" href="{{.Next.Url}}" title="Show on air next: {{.Next.Title}}">
+    <a class="current-and-next-next p-3 p-lg-4" href="{{.Next.Url}}" title="Up next: {{.Next.Title}}">
     {{else}}
     <div class="current-and-next-next p-3 p-lg-4">
     {{end}}
@@ -73,7 +73,7 @@
   {{end}}
 </div>
 {{else}}
-<span>Looks like there is nothing on here.</span>
+<span>Looks like there is nothing on right now.</span>
 {{end}}
 </div>
 {{end}}
