added 2023 sra best newcomer bronze award

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -115,6 +115,10 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-lg-6">
+        <h2>2023</h2>
+        <ul>
+          <li>Bronze Best Newcomer (<a href="{{url "/people/11850"}}")>Harvey Mellor</a>)</li>
+        </ul>
         <h2>2022</h2>
         <ul>
           <li>Gold Best Chart Show Programming (<a href="{{url "/schedule/shows/timeslots/150434/"}}">URY's Entry</a>)</li>
