feat: add SRA award

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -117,6 +117,7 @@
       <div class="col-md-6 col-lg-6">
         <h2>2023</h2>
         <ul>
+          <li>Gold Best Newcomer (<a href="{{ "/people/11813" }}">Fion Cudmore</a>)</li>
           <li>Bronze Best Newcomer (<a href="{{url "/people/11850"}}")>Harvey Mellor</a>)</li>
         </ul>
         <h2>2022</h2>
