--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -119,6 +119,7 @@
         <ul>
           <li>Gold Best Newcomer (<a href="{{ "/people/11813" }}">Fion Cudmore</a>)</li>
           <li>Bronze Best Technical Achievement (Roses 2023)</li>
+          <li>Bronze Best Station Sound (Roses 2023)</li>
           <li>Bronze Best Newcomer (<a href="{{url "/people/11850"}}")>Harvey Mellor</a>)</li>
         </ul>
         <h2>2022</h2>
