--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -118,6 +118,7 @@
         <h2>2023</h2>
         <ul>
           <li>Gold Best Newcomer (<a href="{{ "/people/11813" }}">Fion Cudmore</a>)</li>
+          <li>Silver Best Event Programming (Roses 2023)</li>
           <li>Bronze Best Technical Achievement (Roses 2023)</li>
           <li>Bronze Best Station Sound (Roses 2023)</li>
           <li>Bronze Best Newcomer (<a href="{{url "/people/11850"}}")>Harvey Mellor</a>)</li>
