--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -117,7 +117,8 @@
       <div class="col-md-6 col-lg-6">
         <h2>2023</h2>
         <ul>
-          <li>Gold Best Newcomer (<a href="{{ "/people/11813" }}">Fion Cudmore</a>)</li>
+          <li>Gold Best Newcomer (<a href="{{url "/people/11813" }}">Fion Cudmore</a>)</li>
+          <li>Gold Best Event Programming (<a href="{{ url "/schedule/shows/14533/" }}">1350AM: The Last Hurrah</a>)</li>
           <li>Silver Best Event Programming (Roses 2023)</li>
           <li>Bronze Best Technical Achievement (Roses 2023)</li>
           <li>Bronze Best Station Sound (Roses 2023)</li>
