added 2023 student radio bronze award for best specialist music programing

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -122,6 +122,7 @@
           <li>Silver Best Event Programming (Roses 2023)</li>
           <li>Bronze Best Technical Achievement (Roses 2023)</li>
           <li>Bronze Best Station Sound (Roses 2023)</li>
+          <li>Bronze Best Specialist Music Programing (<a href="{{url "/schedule/shows/14089/"}}">Indie Archive</a>)</li>
           <li>Bronze Best Newcomer (<a href="{{url "/people/11850"}}")>Harvey Mellor</a>)</li>
         </ul>
         <h2>2022</h2>
