feat: add SRA award

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -119,6 +119,7 @@
         <ul>
           <li>Gold Best Newcomer (<a href="{{url "/people/11813" }}">Fion Cudmore</a>)</li>
           <li>Gold Best Event Programming (<a href="{{ url "/schedule/shows/14533/" }}">1350AM: The Last Hurrah</a>)</li>
+          <li>Gold Best Specialist Music Programming (<a href="{{url "/schedule/shows/14496/" }}">Singles of the Seventies</a>)</li>
           <li>Silver Best Event Programming (Roses 2023)</li>
           <li>Bronze Best Technical Achievement (Roses 2023)</li>
           <li>Bronze Best Station Sound (Roses 2023)</li>
