--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -117,6 +117,7 @@
       <div class="col-md-6 col-lg-6">
         <h2>2023</h2>
         <ul>
+          <li>Gold Best Chart Show Programming (<a href="{{url "/schedule/shows/timeslots/150434/"}}">URY's Entry</a>)</li>
           <li>Gold Best Newcomer (<a href="{{url "/people/11813" }}">Fion Cudmore</a>)</li>
           <li>Gold Best Event Programming (<a href="{{ url "/schedule/shows/14533/" }}">1350AM: The Last Hurrah</a>)</li>
           <li>Gold Best Specialist Music Programming (<a href="{{url "/schedule/shows/14496/" }}">Singles of the Seventies</a>)</li>
