yeet: remove surround sound buttons for carols
This reverts commit 0ae6db5a737f72b3140d6f4ea840f78b619923d6.

--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -25,8 +25,7 @@
     {{else}}
     </div>
     {{end}}
-    <a href="https://ury.org.uk/listen" class="btn btn-red listen-btn listen-btn-animated listen-btn-not-surround mobile-hide" title="Listen Live" onclick="window.open('//ury.org.uk/live', 'radioplayer', 'height=800,width=440'); return false;"><i class="fa fa-volume-up mr-2"></i>Listen Live</a>
-    <a href="https://ury.org.uk/media/surround/" class="btn btn-primary listen-btn listen-btn-animated listen-btn-surround mobile-hide" title="Surround Sound"><i class="fa fa-volume-up mr-2"></i>Surround Sound</a>
+    <a href="https://ury.org.uk/listen" class="btn btn-red listen-btn listen-btn-animated mobile-hide" title="Listen Live" onclick="window.open('//ury.org.uk/live', 'radioplayer', 'height=800,width=440'); return false;"><i class="fa fa-volume-up mr-2"></i>Listen Live</a>
   </div>
   {{end}}
   {{if .Next}}
