change competition width

--- a/views/competitions.tmpl
+++ b/views/competitions.tmpl
@@ -10,8 +10,8 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded bg-off-white">
-  <div class="container">
+<div class="container-fluid container-padded bg-off-white" >
+  <div class="container container-sm" style="max-width:1000px">
     <h1 class="text-center">General Rules</h1>
     <p><strong>All competitions run by University Radio York (URY) are governed by the following rules:</strong></p>
     <p>Competitions on URY will be advertised either on air, on our website (ury.org.uk) or via our social media pages. Each competition will detail how to enter the competition, quantities and specifications of prizes, and any further conditions of the competition.</p>
