Empty-state for team officers

--- a/views/team.tmpl
+++ b/views/team.tmpl
@@ -71,6 +71,13 @@
         </div>
       </div>
     </div>
+    {{else}}
+      <div class="container-fluid bg-secondary">
+        <div class="container container-padded">
+          <h2>Team Officers</h2>
+          <p>There's currently nobody on this team. Why not join it yourself?</p>
+        </div>
+      </div>
     {{end}}
     <div class="container-fluid bg-third">
       <div class="container container-padded">
